--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,1 +1,25 @@
 @import './mixins.scss';
+
+//HOMECONTAINER
+.homeContainer{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    height: vh;
+    width: 100%;
+}
+
+.principalIcon{
+    height: 32px;
+    width: 32px;
+}
+
+.iconCerrar{
+    height: 24px;
+    width: 24px;
+}
+
+.document{
+    height: 24px;
+    width: 24px;
+}
