[FEAT] Input radio titular del documento

--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,7 +1,7 @@
 //Colores
 $text-color: #000000;
 $backgorund-alert-color: #E03E52;
-$icon-color: #61A3BA;
-$button-color: #A2C579;
-$border-box-color: #4B4F54;
-$background-color: #FFFFFF;
+$icon-color: #7469B6;
+$button-color: #AD88C6;
+$border-box-color: #CACACA;
+$basic-color: #FFFFFF;
