--- a/src/styles/styles.radioAdopto.scss
+++ b/src/styles/styles.radioAdopto.scss
@@ -1,33 +1,36 @@
 //INPUTS
 .iconAdopto {
-    width: 80px;
-    height: 80px;
-  }
-  
+  width: 42px;
+  height: 42px;
+}
+.containerRadioDoc {
+  display: flex;
+  align-items: center;
+
   .borderRadioDoc {
-    height: 150px;
-    width: 200px;
+    height: 96px;
+    width: 170px;
     border: 1px solid $border-box-color;
     border-radius: 4px;
     padding-top: 20px;
     padding-bottom: 10px;
-    display: inline-block;
     margin: 5px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
-  
+
   .radioLabel {
     display: inline-block;
     cursor: pointer;
-  
-    img {
-    }
-  
+
     p {
       margin-top: 5px;
       font-weight: normal;
+      font-size: 14px;
     }
-  
+
     &:hover {
       img,
       p {
@@ -36,3 +39,33 @@
       }
     }
   }
+}
+
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+
+.radio-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: white;
+}
+
+input[type="radio"]:checked + .radio-overlay {
+  background-color: transparent;
+}
+
+.radioLabel {
+  position: relative;
+}
+
+.radioLabel .radio-overlay {
+  z-index: 1;
+}
