[STYLE] Modificaciones en los estilos de los input radio

--- a/src/styles/styles.radioTipoID.scss
+++ b/src/styles/styles.radioTipoID.scss
@@ -1,86 +1,61 @@
-[type="radio"]:checked,
-[type="radio"]:not(:checked) {
-  position: absolute;
-  left: -9999px;
-}
-[type="radio"]:checked + label,
-[type="radio"]:not(:checked) + label {
-  position: relative;
-  padding-left: 28px;
-  cursor: pointer;
-  line-height: 20px;
-  display: inline-block;
- 
-}
-[type="radio"]:checked + label:before,
-[type="radio"]:not(:checked) + label:before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 18px;
-  height: 18px;
-  border: 1px solid #ddd;
-  border-radius: 100%;
-  background: #fff;
-}
-[type="radio"]:checked + label:after,
-[type="radio"]:not(:checked) + label:after {
-  content: "";
-  width: 12px;
-  height: 12px;
-  background: $icon-color;
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  border-radius: 100%;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-[type="radio"]:not(:checked) + label:after {
-  opacity: 0;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-}
-[type="radio"]:checked + label:after {
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-}
-
-
 
 //
 
-.principalContainerRadioID{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    
-    .textTipoPasaporte{
-      font-size: 14px;
-    }
+.principalContainerRadioID {
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  width: 400px;
+ 
+}
 
-    .containerRadioID{
-      border: 1px solid $border-box-color;
-      height: 47px;
-      width: 102px;
-      border-radius: 4px;
-      margin: 5px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  .textTipoDoc {
+    font-size: 14px;
+    color: $text-color;
   }
-  .containerRadioIDPasaporte{
+
+  .labelButton{
     border: 1px solid $border-box-color;
     height: 47px;
-    width: 126px;
+    width: 102px;
     border-radius: 4px;
     margin: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+
   }
-}
+
+  input[type="radio"] {
+
+    &:checked + label {
+      border: solid 3px #AD88C6;
+      background: #FFF;
+      transition: transform .5s;
+    }
+  }
+
+  // .containerRadioID {
+  //   border: 1px solid $border-box-color;
+  //   height: 47px;
+  //   width: 102px;
+  //   border-radius: 4px;
+  //   margin: 5px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
+
+  // .containerRadioIDPasaporte {
+  //   border: 1px solid $border-box-color;
+  //   height: 47px;
+  //   width: 126px;
+  //   border-radius: 4px;
+  //   margin: 5px;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
+
+
 
