--- a/src/styles/styles.radioAdopto.scss
+++ b/src/styles/styles.radioAdopto.scss
@@ -6,66 +6,26 @@
 .containerRadioDoc {
   display: flex;
   align-items: center;
-
-  .borderRadioDoc {
-    height: 96px;
-    width: 170px;
-    border: 1px solid $border-box-color;
-    border-radius: 4px;
-    padding-top: 20px;
-    padding-bottom: 10px;
-    margin: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-
-  .radioLabel {
-    display: inline-block;
-    cursor: pointer;
-
-    p {
-      margin-top: 5px;
-      font-weight: normal;
-      font-size: 14px;
-    }
-
-    &:hover {
-      img,
-      p {
-        border-color: $icon-color;
-        font-weight: 600;
-      }
-    }
-  }
-}
-
-input[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-
-.radio-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: white;
-}
-
-input[type="radio"]:checked + .radio-overlay {
-  background-color: transparent;
 }
 
 .radioLabel {
-  position: relative;
+  display: inline-block;
+
+  height: 96px;
+  width: 170px;
+  border: 1px solid $border-box-color;
+  border-radius: 4px;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.radioLabel .radio-overlay {
-  z-index: 1;
+.radioLabel p {
+  margin-top: 5px;
+  font-weight: normal;
+  font-size: 14px;
 }
