--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -84,6 +84,8 @@
   .informationText {
     height: 38px;
     width: 345px;
+    font-size: 16px;
+
   }
 }
 
@@ -95,7 +97,18 @@
 
   .textDocTitular {
     font-weight: 600;
+    font-size: 16px;
+
   }
+}
+
+//INPUT TITULARES
+
+.containerTitulares {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
 
 //TEXTO "TIPO DE DOCUMENTO"
@@ -106,6 +119,7 @@
   margin-bottom: 20px;
   .textTipoDoc {
     font-weight: 600;
+    font-size: 16px;
   }
 }
 
@@ -118,6 +132,7 @@
   margin-bottom: 20px;
   .textNumDoc {
     font-weight: 600;
+    font-size: 16px;
   }
 }
 
@@ -130,9 +145,16 @@
   padding: 0px 20px 0px 20px;
 }
 
-input[type="text"]:focus{
+input[type="text"]:focus {
   outline: none;
   border: 1px solid $border-box-color;
+}
+
+//ERROR
+.inputError {
+  font-size: 16px;
+  color: $backgorund-alert-color;
+  font-weight: 600;
 }
 
 //BOTON
@@ -146,5 +168,5 @@ input[type="text"]:focus{
   border-radius: 24.5px;
   font-weight: 600;
   font-size: 14px;
-  margin-top: 25px;
+  margin-top: 5px;
 }
