--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -64,12 +64,21 @@
     height: 24px;
   }
 
+  .alertContainer{
+    height: 30px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+  }
+
   .alertDocument {
     height: 20px;
     width: 295px;
     border-radius: 4px;
     background-color: $backgorund-alert-color;
     padding-bottom: 5px;
+    display: flex;
+    text-align: center;
 
     .textAlertDocument {
       width: 266px;
@@ -78,6 +87,7 @@
       line-height: 1px;
       color: $basic-color;
       font-weight: 600;
+      margin-top: 10px;
     }
   }
 
@@ -169,4 +179,10 @@ input[type="text"]:focus {
   font-weight: 600;
   font-size: 14px;
   margin-top: 5px;
+}
+
+//MODAL
+.titleModal{
+  color: $backgorund-alert-color;
+  font-size: 16px;
 }
