[STYLES] Corrección de estilos generales

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import './styles.scss';
 @import './styles.radioAdopto.scss';
 @import './styles.radioTipoID.scss';
+@import './styles.modalPasaporte.scss'
