--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -69,26 +69,29 @@
     width: 300px;
     display: flex;
     align-items: center;
+
+    .alertDocument {
+      height: 20px;
+      width: 295px;
+      border-radius: 4px;
+      background-color: $backgorund-alert-color;
+      padding-bottom: 5px;
+      display: flex;
+      text-align: center;
+  
+      .textAlertDocument {
+        width: 266px;
+        height: 17px;
+        font-size: 12px;
+        line-height: 1px;
+        color: $basic-color;
+        font-weight: 600;
+        margin-top: 10px;
+        padding-left: 25px;
+      }
   }
 
-  .alertDocument {
-    height: 20px;
-    width: 295px;
-    border-radius: 4px;
-    background-color: $backgorund-alert-color;
-    padding-bottom: 5px;
-    display: flex;
-    text-align: center;
 
-    .textAlertDocument {
-      width: 266px;
-      height: 17px;
-      font-size: 12px;
-      line-height: 1px;
-      color: $basic-color;
-      font-weight: 600;
-      margin-top: 10px;
-    }
   }
 
   .informationText {
@@ -103,7 +106,7 @@
   display: flex;
   height: 24px;
   width: 353px;
-  margin-bottom: 20px;
+  margin: 20px 0px 5px 0px;
 
   .textDocTitular {
     font-weight: 600;
@@ -126,7 +129,8 @@
   display: flex;
   height: 24px;
   width: 353px;
-  margin-bottom: 20px;
+  margin: 20px 0px 5px 0px;
+
   .textTipoDoc {
     font-weight: 600;
     font-size: 16px;
@@ -139,7 +143,8 @@
   display: flex;
   height: 24px;
   width: 353px;
-  margin-bottom: 20px;
+  margin: 20px 0px 5px 0px;
+  
   .textNumDoc {
     font-weight: 600;
     font-size: 16px;
@@ -151,8 +156,9 @@
   border: 1px solid $border-box-color;
   border-radius: 4px;
   height: 48px;
-  width: 326px;
+  width: 353px;
   padding: 0px 20px 0px 20px;
+  margin-bottom: 10px;
 }
 
 input[type="text"]:focus {
@@ -181,8 +187,4 @@ input[type="text"]:focus {
   margin-top: 5px;
 }
 
-//MODAL
-.titleModal{
-  color: $backgorund-alert-color;
-  font-size: 16px;
-}
+
